Fix alignment of long tree labels

--- a/src/components/prometheus-extension.module.css
+++ b/src/components/prometheus-extension.module.css
@@ -20,6 +20,7 @@ ul.Tree {
   font-family: monospace;
   border: none;
   background-color: transparent;
+  text-align: left;
 }
 
 .Expandable .TreeLabel {
